# finnerio-music-api

./: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
api/genres/: __init__.py  albums.py  artists.py  genres.py  songs.py
src/: db.py  models.py  server.py  settings.py
tests/: test_models.py
