[tool.poetry]
name = "finnerio-music-api"
version = "0.0.1"
description = "Finnerio music api project"
authors = ["gonz <gonzasestopal@gmail.com>"]
readme = "README.md"
packages = [{include = "finnerio_music_api"}]

[tool.poetry.dependencies]
python = "3.9"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
SQLAlchemy = "^1.4.45"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"
pre-commit = "^2.0.1"
isort = "^4.3.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
