[tool.poetry]
name = "finnerio-music-api"
version = "0.0.1"
description = "Finnerio music api project"
authors = ["gonz <gonzasestopal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
SQLAlchemy = "^1.4.45"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.10.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"
pre-commit = "^2.0.1"
isort = "^4.3.21"

[tool.black]
line-length = 99
target-version = ['py39']
include = '\.pyi?$'
exclude = '/(\.eggs|\.git|\.venv|\.scrapy)/'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
